# EnglishWritingCheck

./: .gitattributes  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: black-format.yml
config/: .gitignore  Api.yaml
modules/: CallApi.py  Cloudflare.py  FileServer.py  HandleApiResult.py  SubThreads.py  __init__.py
modules/utils/: Config.py  DataTypes.py  Enums.py  Logger.py  Paths.py  Sql.py  __init__.py
test/: api.http  testCallApi.py  testHandleApiReply.py  testHandleApiResult.py  testPydantic.py  testShowOptions.py
test/1/: orignReply.txt  paper.txt  reply.json  result.json
test/html/: 0.html  githubMd.http
ui/: Main.py  ShowOptions.py  Ui.py  __init__.py
ui/Windows/: Main.ui  Main_ui.py  ShowOption.ui  ShowOption_ui.py
ui/html/: github-markdown.css  template.html  test.html
