[project]
name = "englishwritingcheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ansi2html>=1.9.2",
    "anyio>=4.12.1",
    "fastapi>=0.134.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pyside6>=6.10.2",
    "pyyaml>=6.0.3",
    "qt-material>=2.17",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]
