[project]
name = "englishwritingcheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ansi2html>=1.9.2",
    "anyio>=4.12.1",
    "fastapi>=0.134.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "markdown>=3.10.2",
    "pydantic>=2.12.5",
    "pyside6>=6.10.2",
    "pyside6-stubs>=6.7.3.0",
    "pyyaml>=6.0.3",
    "qt-material>=2.17",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]